--- a/common_ui_project/src/main/res/layout/activity_main.xml
+++ b/common_ui_project/src/main/res/layout/activity_main.xml
@@ -26,6 +26,12 @@
                 android:layout_height="wrap_content"
                 android:text="BadgeView视图"/>
 
+            <Button
+                android:id="@+id/btnMainReveal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Reveal视图"/>
+
         </LinearLayout>
 
     </ScrollView>
