--- a/common_ui_project/src/main/res/layout/activity_main.xml
+++ b/common_ui_project/src/main/res/layout/activity_main.xml
@@ -1,9 +1,10 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="16dp"
+    tools:context=".MainActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -37,6 +38,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="加载动画"/>
+
+            <Button
+                android:id="@+id/btnMainEdit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="EditText输入框"/>
+
+            <Button
+                android:id="@+id/btnMainPercent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="百分比布局"/>
 
         </LinearLayout>
 
