--- a/common_ui_project/src/main/res/values/styles.xml
+++ b/common_ui_project/src/main/res/values/styles.xml
@@ -1,9 +1,15 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="BaseAppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="android:listDivider">@drawable/shape_list_divier</item>
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">#FF4081</item>
     </style>
+
+    <style name="AppTheme" parent="@style/BaseAppTheme">
+    </style>
+
 
 </resources>
