--- a/common_ui_project/src/main/res/layout/activity_main.xml
+++ b/common_ui_project/src/main/res/layout/activity_main.xml
@@ -51,6 +51,12 @@
                 android:layout_height="wrap_content"
                 android:text="百分比布局"/>
 
+            <Button
+                android:id="@+id/btnMainPull"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Ultra Pull To Refresh"/>
+
         </LinearLayout>
 
     </ScrollView>
